--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dynamic-import-example",
+    "name": "test-dynamic-import",
     "version": "1.0.0",
     "description": "",
     "author": {
@@ -9,8 +9,8 @@
     },
     "license": "MIT",
     "scripts": {
-        "start": "http-server app/",
-        "deploy": "cross-env NODE_DEBUG=gh-pages gh-pages -d app/"
+        "start": "http-server src/",
+        "deploy": "cross-env NODE_DEBUG=gh-pages gh-pages -d src/"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
