--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "license": "MIT",
     "scripts": {
-        "start": "http-server src/",
+        "start": "http-server -c-1 src/",
         "deploy": "cross-env NODE_DEBUG=gh-pages gh-pages -d src/"
     },
     "devDependencies": {
